* Fixed a lowercase value that should have been ucfirst. Thanks to chromatic
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@395 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -179,7 +179,7 @@ Weblogs tend to center around posts, so it's no surprise that the first model
 to create is the C<post>:
 
   # cd MyWeblog
-  # jifty model --name post
+  # jifty model --name Post
   Writing file /tmp/MyWeblog/t/00-model-Post.t
   Writing file /tmp/MyWeblog/lib/MyWeblog/Model/Post.pm
 
