* Sorted deps  * Added requirement of Test::Base 0.62  * Added Test::Pod::Coverage; patch from Todd Chapman <todd@chaka.net>  * Tutorial fixes; patch from Anton Berezin <tobez@tobez.org>
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@407 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -287,11 +287,11 @@ treat the URL C</index.html> as the I<default> page for your site).  Make it
 look like this:
 
   <%init>
-  my $posts = Jifty::Model::PostCollection();
+  my $posts = MyWeblog::Model::PostCollection->new();
   $posts->unlimit();
   </%init>
 
-  <&|/_elements/wrapper, title => Jifty->config->framework('AppName') &>
+  <&|/_elements/wrapper, title => Jifty->config->framework('ApplicationName') &>
   <dl>
   % while (my $post = $posts->next) {
    <dt><%$post->title%></dt>
@@ -368,7 +368,7 @@ working on ways to make this better.)
 Inside your applications F<web/templates> directory, create a directory called
 F<_elements>.
 
-Inside F<_elements/nav>, open up a new file called C<nav> in your text editor
+Inside F<_elements>, open up a new file called C<nav> in your text editor
 and insert:
 
   <%init>
