Fix POD references to Jifty::Web::PageRegion.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@414 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Glossary.pod
+++ b/lib/Jifty/Manual/Glossary.pod
@@ -28,7 +28,7 @@ incorrect, it is the buzzword that describes doing asynchronous requests to the
 server while the user waits.  This can lead to very "dynamic" pages, as the
 browser does not need to refresh the entire page to update a small section of
 the screen.  In Jifty, the sections of the screen are called L</region>s.  See
-L<Jifty::PageRegion>.
+L<Jifty::Web::PageRegion>.
 
 =item argument
 
