Another moved module reference
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@420 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -380,7 +380,7 @@ and insert:
   </%init>
 
 For more information about the menu system, see the documentation in
-L<Jifty::Menu>.
+L<Jifty::Web::Menu>.
 
 =head2 That's it!
 
