Change some stuff in tutorial that was just plugging in defaults.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@421 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -375,8 +375,9 @@ and insert:
 
   <%init>
   my $top = Jifty->web->navigation;
-  $top->child( Home => url => "/", sort_order => 1 );
-  $top->child( Post  => url => "/post", label      => "Post", sort_order => 2);
+  $top->child( Home => url => "/");
+  $top->child( Post  => url => "/post", 
+                        label => "Post Article");
   </%init>
 
 For more information about the menu system, see the documentation in
