* Autoinstantiate a "blank" dispatcher if necessary. * Doc the dispatcher (a bit) in the objectmodel
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@457 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/ObjectModel.pod
+++ b/lib/Jifty/Manual/ObjectModel.pod
@@ -117,6 +117,13 @@ L<Jifty::Notification> email driver. You might want to override this
 class if you want to set an application-specific header or footer for
 all outgoing email.
 
+=item MyWeblog::Dispatcher>
+
+C<MyWeblog::Dispatcher> is an application-speciific "dispatcher" class that
+allows you to write code that runs when a client makes a request to the server
+I<before> Jifty runs I<actions> or renders I<templates>.  See L<Jifty::Dispatcher>
+for more information about the dispatcher.
+
 =item MyWeblog::CurrentUser
 
 Most every web application that grows past a personal hack eventually
