Distribution instruction updates from Grant Grueninger
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@514 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -34,9 +34,10 @@ defaults to.)
 You can either grab a complete Jifty package from http://jifty.org/download
 or install from CPAN. If you get the I<slim> version from CPAN, you'll have
 to install Jifty's dependencies yourself. (Though we help out with that 
-where we can.)  If you want to get up and running quickly, grab:
+where we can.)  If you want to get up and running quickly, grab the latest
+version from:
 
-    http://download.jifty.org/pub/jifty/jifty-latest.tgz
+    http://download.jifty.org/pub/jifty/
 
 Either way, the installation process is the same:
 
