--- a/lib/Jifty/Manual/Tutorial.pod
+++ b/lib/Jifty/Manual/Tutorial.pod
@@ -393,7 +393,7 @@ to obsolete the I<hard bits> of this tutorial as quickly as we can.
 Please join us on the C<jifty-devel> mailing list to talk about how you're 
 using Jifty or what you find difficult or hard to use about it.
 
- /=head1 GETTING HELP
+=head1 GETTING HELP
 
 =head2 Joining the mailing list
 
